# Test_rebel_arm

./: README.md
rebel_arm_description/: package.xml  setup.py
rebel_arm_description/config/: rebel_arm_controllers.yaml
rebel_arm_description/launch/: arm.launch.py  armtest.launch.py  gazebo.launch.py
rebel_arm_description/rebel_arm_description/: pub.py
rebel_arm_description/urdf/: arm.gazebo  arm.trans  arm.urdf  arm.xacro  ros2_control.xacro
rebel_arm_description/worlds/: my_world.world
rebel_arm_hardware_interface/include/rebel_arm_hardware_interface/: rebel_arm_hardware_interface.hpp
rebel_arm_hardware_interface/src/: rebel_arm_hardware_interface.cpp
rebel_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rebel_arm_moveit_config/config/: arm.srdf  arm.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
rebel_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
